# fastapi_tutorial

fastapi_body_update/: pyproject.toml
fastapi_body_update/app/: main.py
fastapi_body_update/docker/: Dockerfile
fastapi_di_classes/: pyproject.toml
fastapi_di_classes/app/: main.py
fastapi_di_first/: pyproject.toml
fastapi_di_first/app/: main.py
fastapi_di_global/: pyproject.toml
fastapi_di_global/app/: main.py
fastapi_di_path/: pyproject.toml
fastapi_di_path/app/: main.py
fastapi_di_sub/: pyproject.toml
fastapi_di_sub/app/: main.py
fastapi_error/: pyproject.toml
fastapi_error/app/: main.py
fastapi_file/: pyproject.toml
fastapi_file/app/: main.py
fastapi_file/docker/: Dockerfile
fastapi_file_form/: pyproject.toml
fastapi_file_form/app/: main.py
fastapi_json/: pyproject.toml
fastapi_json/app/: main.py
fastapi_path_config/: pyproject.toml
fastapi_path_config/app/: main.py
